# solid-spork

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/api/: dtos.rs  handlers.rs  mod.rs  router.rs
src/common/: common.rs  data_transformation.rs  mod.rs
src/data/: postgres_db.rs  redis_db.rs
src/database/: mod.rs  postgres_db.rs  redis_db.rs
src/domain/: mod.rs
src/domain/entity/: mod.rs  model_a_entity.rs  model_b_entity.rs
src/domain/logic/: mod.rs  model_a_logic.rs  model_b_logic.rs
src/dtos/: mod.rs
src/insights/: mod.rs
src/insights/insight2/: mod.rs
src/repository/: data_repository.rs  mod.rs
src/services/: mod.rs
