[package]
name = "solid_spork"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0" }
axum = { version = "0.8.6" }
dotenvy = { version = "0.15.7" }
polars = { version = "0.51.0", features = ["lazy"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
serde_json = { version = "1.0.145" }
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio", "chrono"]}
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
